# tesseract-node

./: .gitignore  CMakeLists.txt  README.md  build.sh  build.yml  cam.camke
plugin/: CMakeLists.txt  plugin.cpp  plugin_interface.h  tesseract.cpp
test/tesseract/: CMakeLists.txt  main.cpp
